--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
         "@tippyjs/react": "^4.2.6",
         "axios": "^1.3.3",
         "classnames": "^2.3.2",
-        "clsx": "^1.2.1",
+        "firebase": "^9.17.2",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.1",
+        "react-infinite-scroll-component": "^6.1.0",
+        "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
         "sass": "^1.58.0",
         "web-vitals": "^2.1.4"
